--- a/index.html
+++ b/index.html
@@ -17,9 +17,13 @@
       <li>Procurando sempre aprender algo novo</li>
       <li>Procuro ser um profissional fullstack, um dia</li>
     </ul>
+    
     <h1>Links Externos</h1>
-    <p>Em construção...</p>
-    <!-- GitHub, LinkedIn, Discord, Telegram. -->
+    <ul type="square">
+      <li><a href="https://github.com/augusto404" target="_blank" rel="external">GitHub</a></li>
+      <li><a href="#" target="_blank" rel="external">E-Mail</a></li>
+      <li><a href="https://github.com/augusto404/Meu-Primeiro-Site" target="_blank" rel="external">Repositório deste site.</a></li>
+    </ul>
   </body>
 </html>
 
