--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   </head>
   <body>
     <h1>Olá, Mundo!</h1>
+    <img src="1.jpg" alt="" width="100%"/>
     <h2>Sobre mim:</h2>
     <ul>
       <li>3° Ano do ensino médio</li>
