--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
     <title>J. Augusto - Home</title>
   </head>
   <body>
-    <h1>Olá, Mundo!</h1>
+    <h1>&#60;Olá, Mundo!&#47;&#62;</h1>
     <img src="1.jpg" alt="" width="100%"/>
-    <h2>Sobre mim:</h2>
+    <h2>Sobre mim</h2>
     <ul>
-      <li>3° Ano do ensino médio</li>
-      <li>Curso técnico em manutenção e suporte</li>
-      <li>Procurando sempre aprender algo novo</li>
-      <li>Procuro ser um profissional fullstack, um dia</li>
+      <li>&#x1F392; 3° Ano do ensino médio;</li>
+      <li>&#x1F4BB; Curso técnico em manutenção e suporte;</li>
+      <li>&#x1F9E0; Procurando sempre aprender algo novo;</li>
+      <li>&#x1F5FF; Pretendo ser um profissional fullstack, um dia.</li>
     </ul>
     
-    <h1>Links Externos</h1>
+    <h2>Links Externos</h2>
     <ul type="square">
-      <li><a href="https://github.com/augusto404" target="_blank" rel="external">GitHub</a></li>
-      <li><a href="#" target="_blank" rel="external">E-Mail</a></li>
-      <li><a href="https://github.com/augusto404/Meu-Primeiro-Site" target="_blank" rel="external">Repositório deste site.</a></li>
+      <li><a href="https://github.com/augusto404" target="_blank" rel="external"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" width="20"/> GitHub</a></li>
+      <li><a href="https://t.me/gravedigger7" target="_blank" rel="external"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/1200px-Telegram_2019_Logo.svg.png" alt="" width="20"/> Telegram (provisório)</a></li>
+      <li><a href="https://github.com/augusto404/Meu-Primeiro-Site" target="_blank" rel="external"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="" width="20"/> Clique aqui e veja como esse site esta sendo construído</a></li>
     </ul>
   </body>
 </html>
