--- a/index.html
+++ b/index.html
@@ -10,15 +10,16 @@
   </head>
   <body>
     <h1>&#60;Olá, Mundo!&#47;&#62;</h1>
-    <img src="1.jpg" alt="" width="100%"/>
-    <h2>Sobre mim</h2>
+    <img src="1.png" alt="" width="100%"/>
+    <br>
+    <h2>Sobre</h2>
     <ul>
       <li>&#x1F392; 3° Ano do ensino médio;</li>
       <li>&#x1F4BB; Curso técnico em manutenção e suporte;</li>
       <li>&#x1F9E0; Procurando sempre aprender algo novo;</li>
       <li>&#x1F5FF; Pretendo ser um profissional fullstack, um dia.</li>
     </ul>
-    
+    <br>
     <h2>Links Externos</h2>
     <ul type="square">
       <li><a href="https://github.com/augusto404" target="_blank" rel="external"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" width="20"/> GitHub</a></li>
