--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   </head>
   <body>
     <h1>&#60;Olá, Mundo!&#47;&#62;</h1>
-    <img src="1.png" alt="Profile picture."/>
+    <img src="1.png" weight="120" alt="Profile picture."/>
     <br>
     <h2>Sobre</h2>
     <ul>
