--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
     <h2>Links Externos</h2>
     <ul type="square">
       <li><a href="https://github.com/augusto404" target="_blank" rel="external"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" width="20"/> GitHub</a></li>
-      <li><a href="https://t.me/gravedigger7" target="_blank" rel="external"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/1200px-Telegram_2019_Logo.svg.png" alt="" width="20"/> Telegram (provisório)</a></li>
-      <li><a href="https://github.com/augusto404/Meu-Primeiro-Site" target="_blank" rel="external"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="" width="20"/> Clique aqui e veja como esse site esta sendo construído</a></li>
+      <li><a href="https://t.me/gravedigger7" target="_blank" rel="external"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/1200px-Telegram_2019_Logo.svg.png" alt="" width="20"/> Telegram</a></li>
+      <li><a href="https://github.com/augusto404/Meu-Primeiro-Site" target="_blank" rel="external"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="" width="20"/> Repositório</a></li>
     </ul>
   </body>
 </html>
