--- a/index.html
+++ b/index.html
@@ -15,9 +15,8 @@
     <h2>Sobre</h2>
     <ul>
       <li>&#x1F392; 3° Ano do ensino médio;</li>
-      <li>&#x1F4BB; Curso técnico em manutenção e suporte;</li>
-      <li>&#x1F9E0; Procurando sempre aprender algo novo;</li>
-      <li>&#x1F5FF; Pretendo ser um profissional fullstack, um dia.</li>
+      <li>&#x1F4BB; Cursando: Técnico em Informática;</li>
+      <li>&#x1F9E0; Sempre aprendendo algo novo.</li>
     </ul>
     <br>
     <h2>Links Externos</h2>
