Organizando pasta de mídia e identando o código.

--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta name="viewport"
     content="width=device-width,
     inicial-scale=1.0">
-    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="midia/favicon.ico" type="image/x-icon" />
     <title>J. Augusto - Home</title>
   </head>
   <body>
     <h1>&#60;Olá, Mundo!&#47;&#62;</h1>
-    <img src="1.png" width="120" alt="Profile picture."/>
+    <img src="midia/1.png" width="120" alt="Profile picture."/>
     <br>
+    
     <h2>Sobre</h2>
     <ul>
       <li>&#x1F392; 3° Ano do ensino médio;</li>
@@ -19,11 +20,24 @@
       <li>&#x1F9E0; Sempre aprendendo algo novo.</li>
     </ul>
     <br>
+
     <h2>Links Externos</h2>
     <ul type="square">
-      <li><a href="https://github.com/augusto404" target="_blank" rel="external"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" width="20"/> GitHub</a></li>
-      <li><a href="https://t.me/gravedigger7" target="_blank" rel="external"><img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/1200px-Telegram_2019_Logo.svg.png" alt="" width="20"/> Telegram</a></li>
-      <li><a href="https://github.com/augusto404/Meu-Primeiro-Site" target="_blank" rel="external"><img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="" width="20"/> Repositório</a></li>
+      <li>
+        <a href="https://github.com/augusto404" target="_blank" rel="external">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" width="20"/> GitHub
+        </a>
+      </li>
+      <li>
+        <a href="https://t.me/gravedigger7" target="_blank" rel="external">
+          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/1200px-Telegram_2019_Logo.svg.png" alt="" width="20"/> Telegram
+        </a>
+      </li>
+      <li>
+        <a href="https://github.com/augusto404/Meu-Primeiro-Site" target="_blank" rel="external">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="" width="20"/> Repositório
+        </a>
+      </li>
     </ul>
   </body>
 </html>
