--- a/index.html
+++ b/index.html
@@ -21,6 +21,14 @@
     </ul>
     <br>
 
+    <h2>Destaques do Linkedin</h2>
+    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6851990031528194048" allowfullscreen="" title="Publicação incorporada" width="504" height="426" frameborder="0"></iframe>
+
+    <h2>Linguagens mais usadas</h2>
+    <div>
+      <img src="//github-readme-stats.vercel.app/api/top-langs/?augusto404={augusto404}&theme=blue-green">
+    </div>
+
     <h2>Links Externos</h2>
     <ul type="square">
       <li>
