--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <h2>Linguagens mais usadas</h2>
     <div>
-      <img src="//github-readme-stats.vercel.app/api/top-langs/?augusto404={augusto404}&theme=blue-green">
+      <img src="//github-readme-stats.vercel.app/api/top-langs/?username=augusto404&theme=dracula">
     </div>
 
     <h2>Links Externos</h2>
