--- a/index.html
+++ b/index.html
@@ -24,9 +24,10 @@
     <h2>Destaques do Linkedin</h2>
     <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6851990031528194048" allowfullscreen="" title="Publicação incorporada" width="504" height="426" frameborder="0"></iframe>
 
-    <h2>Linguagens mais usadas</h2>
-    <div>
-      <img src="//github-readme-stats.vercel.app/api/top-langs/?username=augusto404&theme=dracula">
+    <h2>Estatísticas do GitHub</h2>
+    <div align="center">
+      <img height="180em" src="https://github-readme-stats.vercel.app/api?username=augusto404&show_icons=true&theme=dracula&include_all_commits=true&count_private=true"/>
+      <img height="180em" src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=dracula"/>
     </div>
 
     <h2>Links Externos</h2>
