--- a/index.html
+++ b/index.html
@@ -7,6 +7,15 @@
     inicial-scale=1.0">
     <link rel="shortcut icon" href="midia/favicon.ico" type="image/x-icon" />
     <title>J. Augusto - Home</title>
+    <style>
+      body {
+        background-color: sandybrown;
+      }
+
+      p {
+        text-align: justify;
+      }
+    </style>
   </head>
   <body>
     <h1>&#60;Olá, Mundo!&#47;&#62;</h1>
@@ -22,11 +31,10 @@
     <br>
 
     <h2>Destaques do Linkedin</h2>
-    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6851990031528194048" allowfullscreen="" title="Publicação incorporada" width="504" height="426" frameborder="0"></iframe>
+    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6851990031528194048" allowfullscreen="" title="Publicação incorporada" width="504" height="597" frameborder="0"></iframe>
 
     <h2>Estatísticas do GitHub</h2>
     <div align="center">
-      <img height="180em" src="https://github-readme-stats.vercel.app/api?username=augusto404&show_icons=true&theme=dracula&include_all_commits=true&count_private=true"/>
       <img height="180em" src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=dracula"/>
     </div>
 
