--- a/index.html
+++ b/index.html
@@ -8,10 +8,6 @@
     <link rel="shortcut icon" href="midia/favicon.ico" type="image/x-icon" />
     <title>J. Augusto - Home</title>
     <style>
-      body {
-        background-color: sandybrown;
-      }
-
       p {
         text-align: justify;
       }
@@ -23,10 +19,11 @@
     <br>
     
     <h2>Sobre</h2>
+    <p>Sou um estudante do ensino médio que tem muitos sonhos, muitos objetivos, e muita vontade de aprender. Comecei aprendendo sobre informática com 11 anos, fazendo um cursinho básico. A partir daí me viciei em computadores e hoje estou aqui, aprendendo a programar..</p>
     <ul>
-      <li>&#x1F392; 3° Ano do ensino médio;</li>
-      <li>&#x1F4BB; Cursando: Técnico em Informática;</li>
-      <li>&#x1F9E0; Sempre aprendendo algo novo.</li>
+      <li>Terceiro ano do ensino médio;</li>
+      <li>Cursando: Técnico Em Manutenção E Suporte Em Hardware;</li>
+      <li>Estudando: HTML5 e CSS3.</li>
     </ul>
     <br>
 
