--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6851990031528194048" allowfullscreen="" title="Publicação incorporada" width="504" height="597" frameborder="0"></iframe>
 
     <h2>Estatísticas do GitHub</h2>
-    <div align="center">
+    <div align="left">
       <img height="180em" src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=dracula"/>
     </div>
 
