--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
     <h2>Estatísticas do GitHub</h2>
     <div align="left">
-      <img height="180em" src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=dracula"/>
+      <img height="100%" src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=dracula"/>
     </div>
 
     <h2>Links Externos</h2>
