--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     <br>
 
     <h2>Destaques do Linkedin</h2>
-    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6851990031528194048" allowfullscreen="" title="Publicação incorporada" width="504" height="597" frameborder="0"></iframe>
+    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6851990031528194048" allowfullscreen="" title="Publicação incorporada" width="100%" frameborder="0"></iframe>
 
     <h2>Estatísticas do GitHub</h2>
     <div align="left">
