--- a/index.html
+++ b/index.html
@@ -7,32 +7,32 @@
     inicial-scale=1.0">
     <link rel="shortcut icon" href="midia/favicon.ico" type="image/x-icon" />
     <title>J. Augusto - Home</title>
-    <style>
-      p {
-        text-align: justify;
-      }
-    </style>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <h1>&#60;Olá, Mundo!&#47;&#62;</h1>
-    <img src="midia/1.png" width="120" alt="Profile picture."/>
+    <div align="center">
+        <img src="midia/1.png" width="120" alt="Profile picture."/>
+        <p>Sou um estudante do ensino médio que tem como objetivo atual aprender programação e ser um profissional de TI cada vez melhor.</p>
+    </div>
     <br>
     
     <h2>Sobre</h2>
-    <p>Sou um estudante do ensino médio que tem muitos sonhos, muitos objetivos, e muita vontade de aprender. Comecei aprendendo sobre informática com 11 anos, fazendo um cursinho básico. A partir daí me viciei em computadores e hoje estou aqui, aprendendo a programar..</p>
-    <ul>
+    <ul type="square">
       <li>Terceiro ano do ensino médio;</li>
       <li>Cursando: Técnico Em Manutenção E Suporte Em Hardware;</li>
-      <li>Estudando: HTML5 e CSS3.</li>
+      <li>Estudando: HTML5 e CSS.</li>
     </ul>
     <br>
 
     <h2>Destaques do Linkedin</h2>
-    <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6851990031528194048" allowfullscreen="" title="Publicação incorporada" width="100%" frameborder="0"></iframe>
+    <div align="center" >
+      <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6851990031528194048" allowfullscreen="" title="Publicação incorporada" width="70%" height="660px" frameborder="0"></iframe>
+    </div>
 
     <h2>Estatísticas do GitHub</h2>
-    <div align="left">
-      <img height="100%" src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=dracula"/>
+    <div align="center">
+      <img width="70%" height="100%" src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=dracula"/>
     </div>
 
     <h2>Links Externos</h2>
