--- a/index.html
+++ b/index.html
@@ -11,28 +11,22 @@
   </head>
   <body>
     <h1>&#60;Olá, Mundo!&#47;&#62;</h1>
-    <div align="center">
-        <img src="midia/1.png" width="120" alt="Profile picture."/>
-        <p>Sou um estudante do ensino médio que tem como objetivo atual aprender programação e ser um profissional de TI cada vez melhor.</p>
+    <div>
+      <img src="midia/1.png" width="120" alt="Profile picture."/>
+      <ul>
+        <li>&#x1F392; 3º ano do ensino médio;</li>
+        <li>&#x1F4BB; Cursando: Técnico em Informática;</li>
+        <li>&#x1F3AF; Estudando: <strong>HTML</strong> e <strong>CSS</strong>;</li>
+        <li>&#x1F680; Sempre interessado em aprender algo novo.</li>
+      </ul>
     </div>
     <br>
-    
-    <h2>Sobre</h2>
-    <ul type="square">
-      <li>Terceiro ano do ensino médio;</li>
-      <li>Cursando: Técnico Em Manutenção E Suporte Em Hardware;</li>
-      <li>Estudando: HTML5 e CSS.</li>
-    </ul>
-    <br>
 
-    <h2>Destaques do Linkedin</h2>
-    <div align="center" >
-      <iframe src="https://www.linkedin.com/embed/feed/update/urn:li:share:6851990031528194048" allowfullscreen="" title="Publicação incorporada" width="70%" height="660px" frameborder="0"></iframe>
-    </div>
-
-    <h2>Estatísticas do GitHub</h2>
-    <div align="center">
-      <img width="70%" height="100%" src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=dracula"/>
+    <h2>GitHub</h2>
+    <div>
+      <a href="https://github.com/augusto404" target="_blank" rel="external">
+        <img height="180em" src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=dracula"/>
+      </a>
     </div>
 
     <h2>Links Externos</h2>
