--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="" width="20"/> Repositório
         </a>
       </li>
+      <li>
+        <a href="https://www.linkedin.com/in/augustojoao0101/" target="_blank" rel="external">
+          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="" width="20"/> LinkdedIn
+        </a>
+      </li>
     </ul>
   </body>
 </html>
