Centralezei os conteúdos do site.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@
     inicial-scale=1.0">
     <link rel="shortcut icon" href="midia/favicon.ico" type="image/x-icon" />
     <title>J. Augusto - Home</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="CSS/style.css">
   </head>
   <body>
     <h1>&#60;Olá, Mundo!&#47;&#62;</h1>
-    <div>
+    <div> 
+      <!-- Colocar itens alinhados ao lado da foto de perfil. -->
       <img src="midia/1.png" width="120" alt="Profile picture."/>
       <ul>
         <li>&#x1F392; 3º ano do ensino médio;</li>
@@ -25,12 +26,14 @@
     <h2>GitHub</h2>
     <div>
       <a href="https://github.com/augusto404" target="_blank" rel="external">
-        <img height="180em" src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=dracula"/>
+        <img height="175em" src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=white"/>
       </a>
+      <!-- Ver se é possível colocar um tema adaptativo ao da página. -->
     </div>
+    <br>
 
     <h2>Links Externos</h2>
-    <ul type="square">
+    <ul>
       <li>
         <a href="https://github.com/augusto404" target="_blank" rel="external">
           <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" width="20"/> GitHub
