--- a/html/index.html
+++ b/html/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport"
     content="width=device-width,
     inicial-scale=1.0">
-    <link rel="shortcut icon" href="midia/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="../midia/favicon.ico" type="image/x-icon" />
     <title>J. Augusto - Home</title>
-    <link rel="stylesheet" href="CSS/style.css">
+    <link rel="stylesheet" href="../css/style.css">
   </head>
   <body>
     <h1>&#60;Olá, Mundo!&#47;&#62;</h1>
     <div> 
       <!-- Colocar itens alinhados ao lado da foto de perfil. -->
-      <img src="midia/1.png" width="120" alt="Profile picture."/>
+      <img src="../midia/1.png" width="120em" alt="Profile picture."/>
       <ul>
         <li>&#x1F392; 3º ano do ensino médio;</li>
         <li>&#x1F4BB; Cursando: Técnico em Informática;</li>
@@ -31,27 +31,23 @@
       <!-- Ver se é possível colocar um tema adaptativo ao da página. -->
     </div>
     <br>
-
-    <h2>Links Externos</h2>
+    <hr>
     <ul>
       <li>
         <a href="https://github.com/augusto404" target="_blank" rel="external">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" width="20"/> GitHub
+          <img src="https://img.shields.io/github/followers/augusto404.svg?style=social&label=Follow&maxAge=2592000" alt="GitHub" width="110em"/>
         </a>
       </li>
+      <br>
       <li>
         <a href="https://t.me/gravedigger7" target="_blank" rel="external">
-          <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/83/Telegram_2019_Logo.svg/1200px-Telegram_2019_Logo.svg.png" alt="" width="20"/> Telegram
+          <img src="https://img.shields.io/badge/Telegram-2CA5E0?style=flat&logo=telegram&logoColor=white" alt="Telegram" width="110em"/>
         </a>
       </li>
-      <li>
-        <a href="https://github.com/augusto404/Meu-Primeiro-Site" target="_blank" rel="external">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/git/git-original.svg" alt="" width="20"/> Repositório
-        </a>
-      </li>
+      <br>
       <li>
         <a href="https://www.linkedin.com/in/augustojoao0101/" target="_blank" rel="external">
-          <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="" width="20"/> LinkdedIn
+          <img src="https://img.shields.io/badge/LinkedIn-0077B5?flat&logo=linkedin&logoColor=white" alt="LinkedIn" width="110em"/>
         </a>
       </li>
     </ul>
