--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport"
     content="width=device-width,
     inicial-scale=1.0">
-    <link rel="shortcut icon" href="../midia/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="midia/favicon.ico" type="image/x-icon" />
     <title>J. Augusto - Home</title>
-    <link rel="stylesheet" href="../css/style.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <h1>&#60;Olá, Mundo!&#47;&#62;</h1>
     <div> 
       <!-- Colocar itens alinhados ao lado da foto de perfil. -->
-      <img src="../midia/1.png" width="120em" alt="Profile picture."/>
+      <img src="midia/1.png" width="120em" alt="Profile picture."/>
       <ul>
         <li>&#x1F392; 3º ano do ensino médio;</li>
         <li>&#x1F4BB; Cursando: Técnico em Informática;</li>
