--- a/index.html
+++ b/index.html
@@ -11,19 +11,22 @@
   </head>
   <body>
     <h1>&#60;Olá, Mundo!&#47;&#62;</h1>
-    <div> 
-      <!-- Colocar itens alinhados ao lado da foto de perfil. -->
+    <div class="perfil"> 
       <img src="midia/1.png" width="120em" alt="Profile picture."/>
-      <ul>
+    </div>
+    <div class="perfil destaque">
+    <ul>
         <li>&#x1F392; 3º ano do ensino médio;</li>
         <li>&#x1F4BB; Cursando: Técnico em Informática;</li>
         <li>&#x1F3AF; Estudando: <strong>HTML</strong> e <strong>CSS</strong>;</li>
         <li>&#x1F680; Sempre interessado em aprender algo novo.</li>
       </ul>
     </div>
+    <!-- Vou ter que ajeitar essa gambiarra que fiz. Colocar uma classe especifica pra esses elementos e um fundo com bordas arredondadas. -->
     <br>
 
     <h2>GitHub</h2>
+    <!-- Colocar outras coisas aqui futuramente. -->
     <div>
       <a href="https://github.com/augusto404" target="_blank" rel="external">
         <img height="175em" src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=white"/>
@@ -32,7 +35,8 @@
     </div>
     <br>
     <hr>
-    <ul>
+
+    <ul> <!-- Isso aqui vai ter que virar um footer, eu acho. -->
       <li>
         <a href="https://github.com/augusto404" target="_blank" rel="external">
           <img src="https://img.shields.io/github/followers/augusto404.svg?style=social&label=Follow&maxAge=2592000" alt="GitHub" width="110em"/>
