--- a/index.html
+++ b/index.html
@@ -11,49 +11,48 @@
   </head>
   <body>
     <h1>&#60;Olá, Mundo!&#47;&#62;</h1>
-    <div class="perfil"> 
-      <img src="midia/1.png" width="120em" alt="Profile picture."/>
-    </div>
-    <div class="perfil destaque">
-    <ul>
-        <li>&#x1F392; 3º ano do ensino médio;</li>
-        <li>&#x1F4BB; Cursando: Técnico em Informática;</li>
-        <li>&#x1F3AF; Estudando: <strong>HTML</strong> e <strong>CSS</strong>;</li>
-        <li>&#x1F680; Sempre interessado em aprender algo novo.</li>
-      </ul>
-    </div>
-    <!-- Vou ter que ajeitar essa gambiarra que fiz. Colocar uma classe especifica pra esses elementos e um fundo com bordas arredondadas. -->
-    <br>
 
-    <h2>GitHub</h2>
-    <!-- Colocar outras coisas aqui futuramente. -->
-    <div>
+    <div class="perfil">
+      <div>
+        <img src="midia/1.jpg" id="foto" alt="Profile picture."/>
+      </div>
+
+      <div>
+        <ul>
+            <li>&#x1F428; 18y;</li>
+            <li>&#x1F4BB; Técnico em Informática;</li>
+            <li>&#x1F3AF; Estudando: <strong>HTML</strong> e <strong>CSS</strong>;</li>
+            <li>&#x1F680; Sempre interessado em aprender algo novo.</li>
+        </ul>
+      </div>
+    </div>
+    
+    <!-- Vou ter que ajeitar essa gambiarra que fiz. Colocar uma classe especifica pra esses elementos e um fundo com bordas arredondadas. -->
+
+    <div class="github">
       <a href="https://github.com/augusto404" target="_blank" rel="external">
         <img height="175em" src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=white"/>
       </a>
-      <!-- Ver se é possível colocar um tema adaptativo ao da página. -->
     </div>
-    <br>
-    <hr>
 
-    <ul> <!-- Isso aqui vai ter que virar um footer, eu acho. -->
-      <li>
-        <a href="https://github.com/augusto404" target="_blank" rel="external">
-          <img src="https://img.shields.io/github/followers/augusto404.svg?style=social&label=Follow&maxAge=2592000" alt="GitHub" width="110em"/>
-        </a>
-      </li>
-      <br>
-      <li>
-        <a href="https://t.me/gravedigger7" target="_blank" rel="external">
-          <img src="https://img.shields.io/badge/Telegram-2CA5E0?style=flat&logo=telegram&logoColor=white" alt="Telegram" width="110em"/>
-        </a>
-      </li>
-      <br>
-      <li>
-        <a href="https://www.linkedin.com/in/augustojoao0101/" target="_blank" rel="external">
-          <img src="https://img.shields.io/badge/LinkedIn-0077B5?flat&logo=linkedin&logoColor=white" alt="LinkedIn" width="110em"/>
-        </a>
-      </li>
-    </ul>
+    <footer>
+      <div class="footer">
+        <div>
+          <a href="https://github.com/augusto404" target="_blank" rel="external">
+            <img src="https://img.shields.io/github/followers/augusto404.svg?style=social&label=Follow&maxAge=2592000" alt="GitHub" width="110em"/>
+          </a>
+        </div>
+        <div>
+          <a href="https://t.me/gravedigger7" target="_blank" rel="external">
+            <img src="https://img.shields.io/badge/Telegram-2CA5E0?style=flat&logo=telegram&logoColor=white" alt="Telegram" width="110em"/>
+          </a>
+        </div>
+        <div>
+          <a href="https://www.linkedin.com/in/augustojoao0101/" target="_blank" rel="external">
+            <img src="https://img.shields.io/badge/LinkedIn-0077B5?flat&logo=linkedin&logoColor=white" alt="LinkedIn" width="110em"/>
+          </a>
+        </div>
+      </div>
+    </footer>
   </body>
 </html>
