--- a/index.html
+++ b/index.html
@@ -10,33 +10,33 @@
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
-    <h1>&#60;Olá, Mundo!&#47;&#62;</h1>
+    <header>
+      <h1>&#60;Olá, Mundo!&#47;&#62;</h1>
+    </header>
 
-    <div class="perfil">
-      <div>
-        <img src="midia/1.jpg" id="foto" alt="Profile picture."/>
+    <main>
+      <div class="perfil">
+        <div>
+          <img src="midia/1.jpg" id="foto" alt="Profile picture."/>
+        </div>
+        <div>
+          <ul>
+              <li>&#x1F428; 18y;</li>
+              <li>&#x1F4BB; Técnico em Informática;</li>
+              <li>&#x1F3AF; Estudando: <strong>HTML</strong> e <strong>CSS</strong>;</li>
+              <li>&#x1F680; Sempre interessado em aprender algo novo.</li>
+          </ul>
+        </div>
       </div>
-
-      <div>
-        <ul>
-            <li>&#x1F428; 18y;</li>
-            <li>&#x1F4BB; Técnico em Informática;</li>
-            <li>&#x1F3AF; Estudando: <strong>HTML</strong> e <strong>CSS</strong>;</li>
-            <li>&#x1F680; Sempre interessado em aprender algo novo.</li>
-        </ul>
+      <div class="github">
+        <a href="https://github.com/augusto404" target="_blank" rel="external">
+          <img height="175em" src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=white"/>
+        </a>
       </div>
-    </div>
-    
-    <!-- Vou ter que ajeitar essa gambiarra que fiz. Colocar uma classe especifica pra esses elementos e um fundo com bordas arredondadas. -->
-
-    <div class="github">
-      <a href="https://github.com/augusto404" target="_blank" rel="external">
-        <img height="175em" src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=white"/>
-      </a>
-    </div>
+    </main>
 
     <footer>
-      <div class="footer">
+      <div>
         <div>
           <a href="https://github.com/augusto404" target="_blank" rel="external">
             <img src="https://img.shields.io/github/followers/augusto404.svg?style=social&label=Follow&maxAge=2592000" alt="GitHub" width="110em"/>
