--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
         </div>
         <div>
           <ul>
-              <li>&#x1F428; 18y;</li>
-              <li>&#x1F4BB; Técnico em Informática;</li>
-              <li>&#x1F3AF; Estudando: <strong>HTML</strong> e <strong>CSS</strong>;</li>
-              <li>&#x1F680; Sempre interessado em aprender algo novo.</li>
+              <li>&#x1F428; <abbr title="Minha idade.">18y</abbr>
+              <li>&#x1F4BB; <abbr title="Curso concluído em 2021.">Técnico em Informática</abbr>ca</a>;</li>
+              <li>&#x1F3AF; <abbr title="Visite meu repositório no github para saber mais.">Estudando: <strong>HTML</strong> e <strong>CSS</strong></abbr>
+              <li>&#x1F680; <abbr title="Minhas certificações encontram-se no LinkedIn.">Sempre interessado em aprender algo novo</abbr>o</M>/li>
           </ul>
         </div>
       </div>
@@ -39,17 +39,23 @@
       <div>
         <div>
           <a href="https://github.com/augusto404" target="_blank" rel="external">
-            <img src="https://img.shields.io/github/followers/augusto404.svg?style=social&label=Follow&maxAge=2592000" alt="GitHub" width="110em"/>
+            <abbr title="Meu perfil no GitHub.">
+              <img src="https://img.shields.io/github/followers/augusto404.svg?style=social&label=Follow&maxAge=2592000" alt="GitHub" width="110em"/>
+            </abbr>
           </a>
         </div>
         <div>
           <a href="https://t.me/gravedigger7" target="_blank" rel="external">
-            <img src="https://img.shields.io/badge/Telegram-2CA5E0?style=flat&logo=telegram&logoColor=white" alt="Telegram" width="110em"/>
+            <abbr title="Meu contato.">
+              <img src="https://img.shields.io/badge/Telegram-2CA5E0?style=flat&logo=telegram&logoColor=white" alt="Telegram" width="110em"/>
+            </abbr>
           </a>
         </div>
         <div>
           <a href="https://www.linkedin.com/in/augustojoao0101/" target="_blank" rel="external">
-            <img src="https://img.shields.io/badge/LinkedIn-0077B5?flat&logo=linkedin&logoColor=white" alt="LinkedIn" width="110em"/>
+            <abbr title="Conecte-se comigo.">
+              <img src="https://img.shields.io/badge/LinkedIn-0077B5?flat&logo=linkedin&logoColor=white" alt="LinkedIn" width="110em"/>
+            </abbr>
           </a>
         </div>
       </div>
