--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>J. Augusto - Home</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
+
   <body>
     <header>
       <h1>&#60;Olá, Mundo!&#47;&#62;</h1>
@@ -21,10 +22,21 @@
         </div>
         <div>
           <ul>
-              <li>&#x1F428; <abbr title="Minha idade.">18y</abbr>
-              <li>&#x1F4BB; <abbr title="Curso concluído em 2021.">Técnico em Informática</abbr>ca</a>;</li>
-              <li>&#x1F3AF; <abbr title="Visite meu repositório no github para saber mais.">Estudando: <strong>HTML</strong> e <strong>CSS</strong></abbr>
-              <li>&#x1F680; <abbr title="Minhas certificações encontram-se no LinkedIn.">Sempre interessado em aprender algo novo</abbr>o</M>/li>
+              <li>&#x1F428;
+                <abbr title="Minha idade."> 18y;</abbr>
+              </li>
+
+              <li>&#x1F4BB;
+                <abbr title="Curso concluído em 2021."> Técnico em Informática;</abbr>
+              </li>
+
+              <li>&#x1F3AF;
+                <abbr title="Visite meu repositório no github para saber mais."> Estudando: <strong>HTML</strong> e <strong>CSS</strong>;</abbr>
+              </li>
+
+              <li>&#x1F680;
+                <abbr title="Minhas certificações encontram-se no LinkedIn.">Sempre interessado em aprender algo novo.</abbr>
+              </li>
           </ul>
         </div>
       </div>
@@ -36,7 +48,6 @@
     </main>
 
     <footer>
-      <div>
         <div>
           <a href="https://github.com/augusto404" target="_blank" rel="external">
             <abbr title="Meu perfil no GitHub.">
@@ -58,7 +69,6 @@
             </abbr>
           </a>
         </div>
-      </div>
     </footer>
   </body>
 </html>
