--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <header>
       <h1>&#60;Olá, Mundo!&#47;&#62;</h1>
     </header>
-
+    
     <main>
       <div class="perfil">
         <div>
@@ -42,7 +42,7 @@
       </div>
       <div class="github">
         <a href="https://github.com/augusto404" target="_blank" rel="external">
-          <img height="175em" src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=white"/>
+          <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=white"/>
         </a>
       </div>
     </main>
