--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
   <body>
     <header>
       <h1>&#60;Olá, Mundo!&#47;&#62;</h1>
+      <nav>
+        <a href="https://github.com/augusto404" target="_blank"><abbr title="Meu perfil no GitHub.">GitHub</abbr></a>
+        <a href="https://t.me/gravedigger7" target="_blank"><abbr title="Meu contato.">Telegram</abbr></a>
+        <a href="https://www.linkedin.com/in/augustojoao0101/" target="_blank"><abbr title="Conecte-se comigo.">LinkedIn</abbr></a>
+      </nav>
     </header>
     
     <main>
@@ -42,33 +47,15 @@
       </div>
       <div class="github">
         <a href="https://github.com/augusto404" target="_blank" rel="external">
-          <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=white"/>
+          <abbr title="Linguagens mais usadas.">
+            <img src="https://github-readme-stats.vercel.app/api/top-langs/?username=augusto404&layout=compact&langs_count=7&theme=white"/>
+          </abbr>
         </a>
       </div>
     </main>
 
     <footer>
-        <div>
-          <a href="https://github.com/augusto404" target="_blank" rel="external">
-            <abbr title="Meu perfil no GitHub.">
-              <img src="https://img.shields.io/github/followers/augusto404.svg?style=social&label=Follow&maxAge=2592000" alt="GitHub" width="110em"/>
-            </abbr>
-          </a>
-        </div>
-        <div>
-          <a href="https://t.me/gravedigger7" target="_blank" rel="external">
-            <abbr title="Meu contato.">
-              <img src="https://img.shields.io/badge/Telegram-2CA5E0?style=flat&logo=telegram&logoColor=white" alt="Telegram" width="110em"/>
-            </abbr>
-          </a>
-        </div>
-        <div>
-          <a href="https://www.linkedin.com/in/augustojoao0101/" target="_blank" rel="external">
-            <abbr title="Conecte-se comigo.">
-              <img src="https://img.shields.io/badge/LinkedIn-0077B5?flat&logo=linkedin&logoColor=white" alt="LinkedIn" width="110em"/>
-            </abbr>
-          </a>
-        </div>
+      <a href="https://github.com/augusto404/augusto404.github.io" target="_blank">Clique aqui e veja como esse site está sendo construído.</a>
     </footer>
   </body>
 </html>
