--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
     content="width=device-width,
     inicial-scale=1.0">
-    <link rel="shortcut icon" href="midia/favicon.ico" type="image/x-icon" />
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
     <title>J. Augusto - Home</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
@@ -16,7 +16,7 @@
 
     <main>
       <div id="perfil">
-        <img id="pfp" src="midia/1.jpg" alt="Profile picture."/>
+        <img id="pfp" src="img/pfp.jpg" alt="Profile picture."/>
         <p id="sobre">Tenho dezoito anos, sou Técnico em Informática e Desenvolvedor Web Front-End.</p>
       </div>
 
